--- a/example_config.json
+++ b/example_config.json
@@ -1,5 +1,5 @@
 {
-    "academy_name": "OO학원",
+    "academy_name": "Grace Art",
     "name_column": "A",
     "phone_column": "B",
     "status_column": "C",
@@ -7,4 +7,5 @@
     "start_row": 2,
     "check_interval": 5
 }
+
 
